Cập nhật chức năng sửa

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 </div>
                 <form action="#">
                     <div class="form-group">
+                        <input type="hidden" name="" id="idxe">
+                    </div>
+                    <div class="form-group">
                         <label for="tenxe" class="tenxe">Tên xe <span>*</span></label>
                         <input value="" type="text" id="tenxe" name="tenxe">
                         <span id="error_tenxe"></span>
